Added generator trigger

--- a/Climbing/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Climbing/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -100,8 +100,8 @@ LodDistance7=0.000000
 
 [DetailCustomWidgetExpansion]
 SideScrollerCharacter_C=SideScrollerCharacter_C.Physics.ConstraintsGroup,SideScrollerCharacter_C.Rendering.TextureStreaming,SideScrollerCharacter_C.Rendering.LOD,
-K2Node_VariableSet=SideScrollerCharacter_C.Physics.ConstraintsGroup,SideScrollerCharacter_C.Rendering.TextureStreaming,SideScrollerCharacter_C.Rendering.LOD,
-K2Node_VariableGet=SideScrollerCharacter_C.Physics.ConstraintsGroup,SideScrollerCharacter_C.Rendering.TextureStreaming,SideScrollerCharacter_C.Rendering.LOD,
+K2Node_VariableSet=
+K2Node_VariableGet=
 StructProperty=SideScrollerCharacter_C.Physics.ConstraintsGroup,SideScrollerCharacter_C.Rendering.TextureStreaming,SideScrollerCharacter_C.Rendering.LOD,
 GeneralProjectSettings=InputSettings.Bindings.ActionMappings.Use,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Crouch,
 GameplayTagsSettings=InputSettings.Bindings.ActionMappings.Use,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Crouch,
@@ -156,12 +156,12 @@ TcpMessagingSettings=InputSettings.Bindings.ActionMappings.Use,InputSettings.Bin
 UdpMessagingSettings=InputSettings.Bindings.ActionMappings.Use,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Crouch,
 WmfMediaSettings=InputSettings.Bindings.ActionMappings.Use,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Crouch,
 NameProperty=SideScrollerCharacter_C.Physics.ConstraintsGroup,SideScrollerCharacter_C.Rendering.TextureStreaming,SideScrollerCharacter_C.Rendering.LOD,
-BoolProperty=SideScrollerCharacter_C.Physics.ConstraintsGroup,SideScrollerCharacter_C.Rendering.TextureStreaming,SideScrollerCharacter_C.Rendering.LOD,
+BoolProperty=
 StaticMeshActor=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.LOD,StaticMeshActor.Collision.Collision,
-ObjectProperty=SideScrollerCharacter_C.Physics.ConstraintsGroup,SideScrollerCharacter_C.Rendering.TextureStreaming,SideScrollerCharacter_C.Rendering.LOD,
+ObjectProperty=
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/SideScrollerBP/Animations/LedgeGrabPlaceHolder
+ContentBrowserTab1.SelectedPaths=/Game/SideScrollerBP/Blueprints
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 SequenceBrowser.ActiveTypeFilters=
@@ -184,7 +184,7 @@ SequenceBrowser.HiddenColumns=ParentAsset
 SequenceBrowser.HiddenColumns=PreviewSkeletalMesh
 SequenceBrowser.HiddenColumns=CurveUIDList
 SequenceBrowser.HiddenColumns=Class
-ContentBrowserTab1.SourcesExpanded=False
+ContentBrowserTab1.SourcesExpanded=True
 ContentBrowserTab1.Locked=False
 ContentBrowserTab1.VerticalSplitter.SlotSize0=0.250000
 ContentBrowserTab1.VerticalSplitter.SlotSize1=0.750000
@@ -199,12 +199,17 @@ ContentBrowserTab1.SelectedCollections=
 ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
+AssetDialog.ThumbnailSizeScale=0.100000
+AssetDialog.CurrentViewType=1
 
 [EditorStartup]
 LastLevel=/Game/SideScrollerBP/Maps/SideScrollerExampleMap
 
 [AssetEditorManager]
 CleanShutdown=True
+OpenAssetsAtExit=/Game/SideScrollerBP/Blueprints/Button1.Button1
+OpenAssetsAtExit=/Game/SideScrollerBP/Blueprints/Elevator1.Elevator1
+OpenAssetsAtExit=/Game/SideScrollerBP/Maps/SideScrollerExampleMap.SideScrollerExampleMap:PersistentLevel.SideScrollerExampleMap
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -714,6 +719,122 @@ REINST_SideScrollerCharacter_C_172.Camera=True
 REINST_SideScrollerCharacter_C_172.Pawn=True
 REINST_SideScrollerCharacter_C_172.Input=True
 REINST_SideScrollerCharacter_C_172.Actor=True
+Button_C.Tick=True
+Button_C.Rendering=True
+Button_C.Replication=True
+Button_C.Input=True
+Button_C.Actor=True
+Button_C.TransformCommon=True
+StaticMeshComponent.Variable=True
+StaticMeshComponent.TransformCommon=True
+StaticMeshComponent.Sockets=True
+StaticMeshComponent.StaticMesh=True
+StaticMeshComponent.Materials=True
+StaticMeshComponent.Physics=True
+StaticMeshComponent.Collision=True
+StaticMeshComponent.Lighting=True
+StaticMeshComponent.Rendering=True
+StaticMeshComponent.Tags=True
+StaticMeshComponent.ComponentReplication=True
+StaticMeshComponent.Cooking=True
+StaticMeshComponent.Events=True
+REINST_SideScrollerCharacter_C_68.None=True
+REINST_SideScrollerCharacter_C_68.Tick=True
+REINST_SideScrollerCharacter_C_68.Character=True
+REINST_SideScrollerCharacter_C_68.Camera=True
+REINST_SideScrollerCharacter_C_68.Pawn=True
+REINST_SideScrollerCharacter_C_68.Rendering=True
+REINST_SideScrollerCharacter_C_68.Replication=True
+REINST_SideScrollerCharacter_C_68.Input=True
+REINST_SideScrollerCharacter_C_68.Actor=True
+Elevator_C.Tick=True
+Elevator_C.Rendering=True
+Elevator_C.Replication=True
+Elevator_C.Input=True
+Elevator_C.Actor=True
+Elevator_C.TransformCommon=True
+SceneComponent.Variable=True
+SceneComponent.TransformCommon=True
+SceneComponent.Sockets=True
+SceneComponent.Rendering=True
+SceneComponent.Tags=True
+SceneComponent.ComponentReplication=True
+SceneComponent.Activation=True
+SceneComponent.Cooking=True
+SceneComponent.Events=True
+Elevator_Blueprint_C.TransformCommon=True
+Elevator_Blueprint_C.StaticMesh=True
+Elevator_Blueprint_C.Materials=True
+Elevator_Blueprint_C.Physics=True
+Elevator_Blueprint_C.Collision=True
+Elevator_Blueprint_C.Lighting=True
+Elevator_Blueprint_C.Rendering=True
+Elevator_Blueprint_C.Tags=True
+Elevator_Blueprint_C.Cooking=True
+Elevator_Blueprint_C.Input=True
+Elevator_Blueprint_C.Actor=True
+Elevator_Blueprint_C.Tick=True
+Elevator_Blueprint_C.Replication=True
+REINST_Elevator_Blueprint_C_65.TransformCommon=True
+REINST_Elevator_Blueprint_C_65.StaticMesh=True
+REINST_Elevator_Blueprint_C_65.Materials=True
+REINST_Elevator_Blueprint_C_65.Physics=True
+REINST_Elevator_Blueprint_C_65.Collision=True
+REINST_Elevator_Blueprint_C_65.Lighting=True
+REINST_Elevator_Blueprint_C_65.Rendering=True
+REINST_Elevator_Blueprint_C_65.Tags=True
+REINST_Elevator_Blueprint_C_65.Cooking=True
+REINST_Elevator_Blueprint_C_65.Input=True
+REINST_Elevator_Blueprint_C_65.Actor=True
+Button1_C.TransformCommon=True
+Button1_C.Rendering=True
+Button1_C.Input=True
+Button1_C.Actor=True
+SideScrollerExampleMap_C.Tick=True
+SideScrollerExampleMap_C.Replication=True
+SideScrollerExampleMap_C.Input=True
+SideScrollerExampleMap_C.Actor=True
+Elevator1_C.TransformCommon=True
+Elevator1_C.StaticMesh=True
+Elevator1_C.Materials=True
+Elevator1_C.Physics=True
+Elevator1_C.Collision=True
+Elevator1_C.Lighting=True
+Elevator1_C.Rendering=True
+Elevator1_C.Tags=True
+Elevator1_C.Cooking=True
+Elevator1_C.Input=True
+Elevator1_C.Actor=True
+Elevator1_C.Variable=True
+Elevator1_C.Sockets=True
+Elevator1_C.ComponentReplication=True
+Elevator1_C.Events=True
+REINST_Elevator1_C_150.TransformCommon=True
+REINST_Elevator1_C_150.StaticMesh=True
+REINST_Elevator1_C_150.Materials=True
+REINST_Elevator1_C_150.Physics=True
+REINST_Elevator1_C_150.Collision=True
+REINST_Elevator1_C_150.Lighting=True
+REINST_Elevator1_C_150.Rendering=True
+REINST_Elevator1_C_150.Tags=True
+REINST_Elevator1_C_150.Cooking=True
+REINST_Elevator1_C_150.Input=True
+REINST_Elevator1_C_150.Actor=True
+REINST_Elevator1_C_150.Variable=True
+REINST_Elevator1_C_150.Sockets=True
+REINST_Elevator1_C_150.ComponentReplication=True
+REINST_Elevator1_C_150.Events=True
+REINST_Elevator1_C_154.TransformCommon=True
+REINST_Elevator1_C_154.StaticMesh=True
+REINST_Elevator1_C_154.Materials=True
+REINST_Elevator1_C_154.Physics=True
+REINST_Elevator1_C_154.Collision=True
+REINST_Elevator1_C_154.Lighting=True
+REINST_Elevator1_C_154.Rendering=True
+REINST_Elevator1_C_154.Tags=True
+REINST_Elevator1_C_154.Cooking=True
+REINST_Elevator1_C_154.Input=True
+REINST_Elevator1_C_154.Actor=True
 
 [FBX_Import_UI_Option_FbxStaticMeshImportData]
 StaticMeshLODGroup=None
@@ -792,6 +913,11 @@ Pawn=
 InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[4]\" \"Object.Bindings.ActionMappings.ActionMappings[5]\" "
 EditorNotifyObject="\"Object.Event.Event\" "
 EditorAnimBaseObj="\"Object.Event.Event\" "
+Elevator_Blueprint_C="\"Object.StaticMeshActor.StaticMeshComponent.Object.Rendering.WireframeColorOverride\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Lighting.LightmassSettings\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Lighting.LightingChannels\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+REINST_Elevator_Blueprint_C_65="\"Object.StaticMeshActor.StaticMeshComponent.Object.Rendering.WireframeColorOverride\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Lighting.LightmassSettings\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Lighting.LightingChannels\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+Elevator1_C="\"Object.StaticMeshActor.StaticMeshComponent.Object.Rendering.WireframeColorOverride\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Lighting.LightmassSettings\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Lighting.LightingChannels\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+REINST_Elevator1_C_150="\"Object.StaticMeshActor.StaticMeshComponent.Object.Rendering.WireframeColorOverride\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Lighting.LightmassSettings\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Lighting.LightingChannels\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+REINST_Elevator1_C_154="\"Object.StaticMeshActor.StaticMeshComponent.Object.Rendering.WireframeColorOverride\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Lighting.LightmassSettings\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Lighting.LightingChannels\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 
 [AssetEditorToolkitTabLocation]
 /Game/SideScrollerBP/Blueprints/SideScrollerCharacter.SideScrollerCharacter=1
@@ -802,13 +928,15 @@ EditorAnimBaseObj="\"Object.Event.Event\" "
 /Game/Mannequin/Character/Mesh/SK_Mannequin.SK_Mannequin=1
 /Game/Mannequin/Animations/ThirdPerson_AnimBP.ThirdPerson_AnimBP=1
 /Game/SideScrollerBP/Animations/LedgeAnimations/WallClimb_Montage.WallClimb_Montage=1
+/Game/SideScrollerBP/Actors/Elevator.Elevator=1
+/Game/SideScrollerBP/Actors/Button.Button=1
 
 [DetailCategoriesAdvanced]
 StaticMeshActor.Collision=True
 StaticMeshActor.Physics=True
 
 [RootWindow]
-ScreenPosition=X=1.000 Y=0.000
+ScreenPosition=X=0.000 Y=0.000
 WindowSize=X=1500.000 Y=960.000
 InitiallyMaximized=True
 
@@ -826,7 +954,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=../../../../../../Users/Weilon/Documents/Unreal Projects/Climbing/Content/SideScrollerBP/Maps
+UNR=../../../../../../Users/Weilon Ying/Documents/Unreal Projects/UE4-Gameplay-Prototype/Climbing/Content/SideScrollerBP/Maps
 BRUSH=../../../../../../Users/Weilon/Documents/Unreal Projects/Climbing/Content/
 FBX=../../../../../../Users/Weilon/Documents/Unreal Projects/Climbing/Content/
 FBXAnim=../../../../../../Users/Weilon/Documents/Unreal Projects/Climbing/Content/
@@ -1374,10 +1502,10 @@ ClothingSystemEditorInterface.TimeStamp=2017.07.16-08.48.26
 ClothingSystemEditorInterface.LastCompileMethod=Unknown
 ExternalImagePicker.TimeStamp=2017.07.16-08.48.47
 ExternalImagePicker.LastCompileMethod=Unknown
-BlueprintProfiler.TimeStamp=2017.07.16-08.48.22
-BlueprintProfiler.LastCompileMethod=Unknown
-BlueprintGraph.TimeStamp=2017.07.16-08.48.22
-BlueprintGraph.LastCompileMethod=Unknown
+BlueprintProfiler.TimeStamp=2017.07.20-23.49.38
+BlueprintProfiler.LastCompileMethod=External
+BlueprintGraph.TimeStamp=2017.07.20-23.49.38
+BlueprintGraph.LastCompileMethod=External
 AnimationBlueprintEditor.TimeStamp=2017.07.16-08.48.11
 AnimationBlueprintEditor.LastCompileMethod=Unknown
 
@@ -1398,5 +1526,7 @@ bSCCUseGlobalSettings=False
 
 [PlacementMode]
 RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
+RecentlyPlaced=/Game/SideScrollerBP/Blueprints/Button1.Button1;
+RecentlyPlaced=/Game/SideScrollerBP/Actors/Elevator.Elevator;
 
 
