Added really bad AI

--- a/Climbing/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Climbing/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -101,8 +101,8 @@ LodDistance7=0.000000
 [DetailCustomWidgetExpansion]
 SideScrollerCharacter_C=SideScrollerCharacter_C.Physics.ConstraintsGroup,SideScrollerCharacter_C.Rendering.TextureStreaming,SideScrollerCharacter_C.Rendering.LOD,
 K2Node_VariableSet=
-K2Node_VariableGet=
-StructProperty=SideScrollerCharacter_C.Physics.ConstraintsGroup,SideScrollerCharacter_C.Rendering.TextureStreaming,SideScrollerCharacter_C.Rendering.LOD,
+K2Node_VariableGet=Wolf_C.Physics.ConstraintsGroup,Wolf_C.Rendering.TextureStreaming,Wolf_C.Rendering.LOD,
+StructProperty=Wolf_C.Physics.ConstraintsGroup,Wolf_C.Rendering.TextureStreaming,Wolf_C.Rendering.LOD,
 GeneralProjectSettings=InputSettings.Bindings.ActionMappings.Use,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Crouch,
 GameplayTagsSettings=InputSettings.Bindings.ActionMappings.Use,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Crouch,
 GameplayTagsDeveloperSettings=InputSettings.Bindings.ActionMappings.Use,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Crouch,
@@ -155,13 +155,14 @@ PaperRuntimeSettings=InputSettings.Bindings.ActionMappings.Use,InputSettings.Bin
 TcpMessagingSettings=InputSettings.Bindings.ActionMappings.Use,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Crouch,
 UdpMessagingSettings=InputSettings.Bindings.ActionMappings.Use,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Crouch,
 WmfMediaSettings=InputSettings.Bindings.ActionMappings.Use,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Crouch,
-NameProperty=SideScrollerCharacter_C.Physics.ConstraintsGroup,SideScrollerCharacter_C.Rendering.TextureStreaming,SideScrollerCharacter_C.Rendering.LOD,
-BoolProperty=
+NameProperty=Wolf_C.Physics.ConstraintsGroup,Wolf_C.Rendering.TextureStreaming,Wolf_C.Rendering.LOD,
+BoolProperty=Wolf_C.Physics.ConstraintsGroup,Wolf_C.Rendering.TextureStreaming,Wolf_C.Rendering.LOD,
 StaticMeshActor=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.LOD,StaticMeshActor.Collision.Collision,
-ObjectProperty=
+ObjectProperty=Wolf_C.Physics.ConstraintsGroup,Wolf_C.Rendering.TextureStreaming,Wolf_C.Rendering.LOD,
+Wolf_C=Wolf_C.Physics.ConstraintsGroup,Wolf_C.Rendering.TextureStreaming,Wolf_C.Rendering.LOD,
+FloatProperty=Wolf_C.Physics.ConstraintsGroup,Wolf_C.Rendering.TextureStreaming,Wolf_C.Rendering.LOD,
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/SideScrollerBP/Blueprints
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 SequenceBrowser.ActiveTypeFilters=
@@ -201,15 +202,14 @@ ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
+ContentBrowserTab1.SelectedPaths=/Game/SideScrollerBP/Actors
 
 [EditorStartup]
 LastLevel=/Game/SideScrollerBP/Maps/SideScrollerExampleMap
 
 [AssetEditorManager]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/SideScrollerBP/Blueprints/Button1.Button1
-OpenAssetsAtExit=/Game/SideScrollerBP/Blueprints/Elevator1.Elevator1
-OpenAssetsAtExit=/Game/SideScrollerBP/Maps/SideScrollerExampleMap.SideScrollerExampleMap:PersistentLevel.SideScrollerExampleMap
+OpenAssetsAtExit=/Game/SideScrollerBP/Actors/Wolf.Wolf
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -835,6 +835,124 @@ REINST_Elevator1_C_154.Tags=True
 REINST_Elevator1_C_154.Cooking=True
 REINST_Elevator1_C_154.Input=True
 REINST_Elevator1_C_154.Actor=True
+Wolf_C.Tick=True
+Wolf_C.Character=True
+Wolf_C.Camera=True
+Wolf_C.Pawn=True
+Wolf_C.Rendering=True
+Wolf_C.Replication=True
+Wolf_C.Input=True
+Wolf_C.Actor=True
+Wolf_C.Variable=True
+Wolf_C.TransformCommon=True
+Wolf_C.Sockets=True
+Wolf_C.Shape=True
+Wolf_C.Navigation=True
+Wolf_C.Physics=True
+Wolf_C.Collision=True
+Wolf_C.Tags=True
+Wolf_C.ComponentReplication=True
+Wolf_C.Cooking=True
+Wolf_C.Events=True
+Wolf_C.Animation=True
+Wolf_C.Mesh=True
+Wolf_C.Clothing=True
+Wolf_C.ClothingSimulation=True
+Wolf_C.Lighting=True
+Wolf_C.Activation=True
+Wolf_C.Character Movement: Jumping / Falling=True
+Wolf_C.Character Movement (General Settings)=True
+Wolf_C.Character Movement: Walking=True
+Wolf_C.Character Movement: Swimming=True
+Wolf_C.Character Movement: Flying=True
+Wolf_C.Character Movement: Custom Movement=True
+Wolf_C.Character Movement (Rotation Settings)=True
+Wolf_C.Character Movement: Physics Interaction=True
+Wolf_C.Character Movement (Networking)=True
+Wolf_C.Character Movement=True
+Wolf_C.Character Movement: Avoidance=True
+Wolf_C.Character Movement: NavMesh Movement=True
+Wolf_C.RootMotion=True
+Wolf_C.NavMovement=True
+Wolf_C.Velocity=True
+Wolf_C.PlanarMovement=True
+Wolf_C.MovementComponent=True
+REINST_Wolf_C_59.TransformCommon=True
+REINST_Wolf_C_59.Animation=True
+REINST_Wolf_C_59.Mesh=True
+REINST_Wolf_C_59.Physics=True
+REINST_Wolf_C_59.Clothing=True
+REINST_Wolf_C_59.Collision=True
+REINST_Wolf_C_59.ClothingSimulation=True
+REINST_Wolf_C_59.Lighting=True
+REINST_Wolf_C_59.Rendering=True
+REINST_Wolf_C_59.Tags=True
+REINST_Wolf_C_59.Activation=True
+REINST_Wolf_C_59.Cooking=True
+REINST_Wolf_C_59.Character Movement: Jumping / Falling=True
+REINST_Wolf_C_59.Character Movement (General Settings)=True
+REINST_Wolf_C_59.Character Movement: Walking=True
+REINST_Wolf_C_59.Character Movement: Swimming=True
+REINST_Wolf_C_59.Character Movement: Flying=True
+REINST_Wolf_C_59.Character Movement: Custom Movement=True
+REINST_Wolf_C_59.Character Movement (Rotation Settings)=True
+REINST_Wolf_C_59.Character Movement: Physics Interaction=True
+REINST_Wolf_C_59.Character Movement (Networking)=True
+REINST_Wolf_C_59.Character Movement=True
+REINST_Wolf_C_59.Character Movement: Avoidance=True
+REINST_Wolf_C_59.Character Movement: NavMesh Movement=True
+REINST_Wolf_C_59.RootMotion=True
+REINST_Wolf_C_59.NavMovement=True
+REINST_Wolf_C_59.Velocity=True
+REINST_Wolf_C_59.PlanarMovement=True
+REINST_Wolf_C_59.MovementComponent=True
+REINST_Wolf_C_59.Shape=True
+REINST_Wolf_C_59.Navigation=True
+REINST_Wolf_C_59.Character=True
+REINST_Wolf_C_59.Camera=True
+REINST_Wolf_C_59.Pawn=True
+REINST_Wolf_C_59.Input=True
+REINST_Wolf_C_59.Actor=True
+BP_Sky_Sphere_C.TransformCommon=True
+BP_Sky_Sphere_C.Default=True
+BP_Sky_Sphere_C.Override settings=True
+BP_Sky_Sphere_C.Rendering=True
+BP_Sky_Sphere_C.Input=True
+BP_Sky_Sphere_C.Actor=True
+Wolf_C.SkeletalMesh=True
+Wolf_C.Optimization=True
+Wolf_C.Mobile=True
+Wolf_C.Default=True
+FloatProperty.Variable=True
+FloatProperty.DefaultValueCategory=True
+SpringArmComponent.Variable=True
+SpringArmComponent.TransformCommon=True
+SpringArmComponent.Sockets=True
+SpringArmComponent.Camera=True
+SpringArmComponent.CameraCollision=True
+SpringArmComponent.CameraSettings=True
+SpringArmComponent.Lag=True
+SpringArmComponent.Rendering=True
+SpringArmComponent.Tags=True
+SpringArmComponent.ComponentReplication=True
+SpringArmComponent.Activation=True
+SpringArmComponent.Cooking=True
+SpringArmComponent.Events=True
+PawnSensingComponent.Variable=True
+PawnSensingComponent.Sockets=True
+PawnSensingComponent.AI=True
+PawnSensingComponent.Tags=True
+PawnSensingComponent.ComponentReplication=True
+PawnSensingComponent.Cooking=True
+PawnSensingComponent.Events=True
+NavMeshBoundsVolume.TransformCommon=True
+NavMeshBoundsVolume.Navigation=True
+NavMeshBoundsVolume.Collision=True
+NavMeshBoundsVolume.Tags=True
+NavMeshBoundsVolume.Cooking=True
+NavMeshBoundsVolume.BrushSettings=True
+NavMeshBoundsVolume.Actor=True
+Wolf_C.Materials=True
 
 [FBX_Import_UI_Option_FbxStaticMeshImportData]
 StaticMeshLODGroup=None
@@ -902,14 +1020,14 @@ DataAsset="\"Object.SkeletalMeshes\" "
 Object=
 EndUserSettings="\"Object.Privacy.bSendAnonymousUsageDataToEpic\" "
 SphereComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[8]\" "
-ShapeComponent=
-PrimitiveComponent=
+ShapeComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[8]\" "
+PrimitiveComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[8]\" "
 SceneComponent=
 ActorComponent=
 StaticMeshActor="\"Object.StaticMeshActor.StaticMeshComponent.Object.Rendering.WireframeColorOverride\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Lighting.LightmassSettings\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Lighting.LightingChannels\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-SideScrollerCharacter_C=
-Character=
-Pawn=
+SideScrollerCharacter_C="\"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CharacterMovement.Object.Velocity.Velocity\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+Character="\"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CharacterMovement.Object.Velocity.Velocity\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+Pawn="\"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CharacterMovement.Object.Velocity.Velocity\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[4]\" \"Object.Bindings.ActionMappings.ActionMappings[5]\" "
 EditorNotifyObject="\"Object.Event.Event\" "
 EditorAnimBaseObj="\"Object.Event.Event\" "
@@ -918,6 +1036,10 @@ REINST_Elevator_Blueprint_C_65="\"Object.StaticMeshActor.StaticMeshComponent.Obj
 Elevator1_C="\"Object.StaticMeshActor.StaticMeshComponent.Object.Rendering.WireframeColorOverride\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Lighting.LightmassSettings\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Lighting.LightingChannels\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 REINST_Elevator1_C_150="\"Object.StaticMeshActor.StaticMeshComponent.Object.Rendering.WireframeColorOverride\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Lighting.LightmassSettings\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Lighting.LightingChannels\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 REINST_Elevator1_C_154="\"Object.StaticMeshActor.StaticMeshComponent.Object.Rendering.WireframeColorOverride\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Lighting.LightmassSettings\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Lighting.LightingChannels\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+Wolf_C="\"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.AvoidanceGroup\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToAvoid\" \"Object.Character.CharacterMovement.Object.Character Movement: Avoidance.GroupsToIgnore\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CharacterMovement.Object.Velocity.Velocity\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 
 [AssetEditorToolkitTabLocation]
 /Game/SideScrollerBP/Blueprints/SideScrollerCharacter.SideScrollerCharacter=1
@@ -930,6 +1052,7 @@ REINST_Elevator1_C_154="\"Object.StaticMeshActor.StaticMeshComponent.Object.Rend
 /Game/SideScrollerBP/Animations/LedgeAnimations/WallClimb_Montage.WallClimb_Montage=1
 /Game/SideScrollerBP/Actors/Elevator.Elevator=1
 /Game/SideScrollerBP/Actors/Button.Button=1
+/Game/SideScrollerBP/Actors/Wolf.Wolf=1
 
 [DetailCategoriesAdvanced]
 StaticMeshActor.Collision=True
@@ -1525,6 +1648,9 @@ bAutomaticallyCheckoutOnAssetModification=False
 bSCCUseGlobalSettings=False
 
 [PlacementMode]
+RecentlyPlaced=/Script/Engine.NavMeshBoundsVolume;/Engine/Transient.ActorFactoryBoxVolume_11
+RecentlyPlaced=/Game/SideScrollerBP/Actors/Wolf.Wolf;
+RecentlyPlaced=/Game/SideScrollerBP/Blueprints/SideScrollerCharacter.SideScrollerCharacter;
 RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/SideScrollerBP/Blueprints/Button1.Button1;
 RecentlyPlaced=/Game/SideScrollerBP/Actors/Elevator.Elevator;
